# postgres

./: .gitignore  Cargo.toml  DOCTRINE.md  README.md
.github/workflows/: release.yml
src/: client.rs  main.rs  service.rs
tests/: integration.rs
